[package]
name = "c2rs"
version = "0.1.0"
edition = "2021"
description = "C Struct to Rust struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.73", features = ["derive", "fold"] }
quote = "1.0.10"