[package]
name = "c2rs"
version = "0.1.2"
edition = "2021"
description = "C struct to Rust struct"
license = "MIT"
repository = "https://github.com/editso/c2rs"
keywords = ["macro", 'c', "converter"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.73", features = ["derive", "fold"] }
quote = "1.0.10"